--- a/src/styles/ProfilePage.css
+++ b/src/styles/ProfilePage.css
@@ -1,11 +1,22 @@
-#profile-page-background{
-    align-content: center; 
-    position: absolute; 
-    height: 100%;
-    width: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    opacity: 1; 
-    z-index: -1;
-    background-attachment: fixed; 
+#profile-page {
+    display: inline-block; 
+    margin: 0 auto;
+    padding: 3px;
+    background-color: #32936F;
+    width: 70%;
+    min-height: 100vh;
+}
+
+#profile-info-row{
+    width:100%;
+    height: 15vh;
+}
+
+#profile-info{
+    float: right;
+    width: 30%;
+    background: pink;
+    border-style: solid;
+    border-radius: 15px;
+    padding:1vh;
 }
